--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <!-- Masthead Heading-->
                 <h2 class="masthead-heading text-uppercase mb-0">Shiva Prasad Acharya</h2>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">MSc.Physics, LL.M Student</p>
+                <p class="masthead-subheading font-weight-light mb-0">एम.एस.सी(भौतिकशास्त्र); एल.एल.एम(संवैधानिक कानून); आचार्य अध्ययनरत(तन्त्रशास्त्र)</p>
                 <nav>
                    
                    
