--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <!-- Masthead Heading-->
                 <h2 class="masthead-heading text-uppercase mb-0">Shiva Prasad Acharya</h2>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">एम.एस.सी.; एल.एल.एम; आचार्य (अध्ययनरत)</p>
+                <p class="masthead-subheading font-weight-light mb-0">एम.एस.सी.; एल.एल.एम; तन्त्राचार्य (अध्ययनरत)</p>
                 <nav>
                                      
                     <a href="https://github.com/ShivaPrasadAcharya"><i class="fab fa-github"></i></a>
