--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="shiva.jpg" alt="..." />
                 <!-- Masthead Heading-->
-                <h2 class="masthead-heading text-uppercase mb-0">Shiva Prasad Acharya</h2>
+                <h2 class="masthead-heading text-uppercase mb-0">शिवप्रसाद आचार्य</h2>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">एम.एस.सी.; एल.एल.एम; तन्त्राचार्य (अध्ययनरत)</p>
                 <nav>
